Archive2/09/b5b8c0a7a2ed91/output
main.cpp:2:8: error: cannot derive from 'final' base 'A' in derived type 'B'
 struct B : private A {};
        ^
